sigar-sys/src/ffi.rs

#[test]
fn bindgen_test_layout_sigar_swap_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_swap_t>(),
        40usize,
        concat!("Size of: ", stringify!(sigar_swap_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_swap_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_swap_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_swap_t>())).total as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_swap_t),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_swap_t>())).used as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_swap_t),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_swap_t>())).free as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_swap_t),
            "::",
            stringify!(free)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_swap_t>())).page_in as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_swap_t),
            "::",
            stringify!(page_in)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_swap_t>())).page_out as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_swap_t),
            "::",
            stringify!(page_out)
        )
    );
}
extern "C" {
    pub fn sigar_swap_get(sigar: *mut sigar_t, swap: *mut sigar_swap_t) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_cpu_t {
    pub user: sigar_uint64_t,
    pub sys: sigar_uint64_t,
    pub nice: sigar_uint64_t,
    pub idle: sigar_uint64_t,
    pub wait: sigar_uint64_t,
    pub irq: sigar_uint64_t,
    pub soft_irq: sigar_uint64_t,
    pub stolen: sigar_uint64_t,
    pub total: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_cpu_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_cpu_t>(),
        72usize,
        concat!("Size of: ", stringify!(sigar_cpu_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_cpu_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_cpu_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).user as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(user)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).sys as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(sys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).nice as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(nice)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).idle as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(idle)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).wait as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(wait)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).irq as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(irq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).soft_irq as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(soft_irq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).stolen as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(stolen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_t>())).total as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_t),
            "::",
            stringify!(total)
        )
    );
}
extern "C" {
    pub fn sigar_cpu_get(sigar: *mut sigar_t, cpu: *mut sigar_cpu_t) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_cpu_list_t {
    pub number: ::std::os::raw::c_ulong,
    pub size: ::std::os::raw::c_ulong,
    pub data: *mut sigar_cpu_t,
}
#[test]
fn bindgen_test_layout_sigar_cpu_list_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_cpu_list_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_cpu_list_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_cpu_list_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_cpu_list_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_list_t>())).number as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_list_t),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_list_t>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_list_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_list_t>())).data as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_list_t),
            "::",
            stringify!(data)
        )
    );
}
impl Default for sigar_cpu_list_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_cpu_list_get(
        sigar: *mut sigar_t,
        cpulist: *mut sigar_cpu_list_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_cpu_list_destroy(
        sigar: *mut sigar_t,
        cpulist: *mut sigar_cpu_list_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_cpu_info_t {
    pub vendor: [::std::os::raw::c_char; 128usize],
    pub model: [::std::os::raw::c_char; 128usize],
    pub mhz: ::std::os::raw::c_int,
    pub mhz_max: ::std::os::raw::c_int,
    pub mhz_min: ::std::os::raw::c_int,
    pub cache_size: sigar_uint64_t,
    pub total_sockets: ::std::os::raw::c_int,
    pub total_cores: ::std::os::raw::c_int,
    pub cores_per_socket: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sigar_cpu_info_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_cpu_info_t>(),
        296usize,
        concat!("Size of: ", stringify!(sigar_cpu_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_cpu_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_cpu_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).vendor as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(vendor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).model as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(model)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).mhz as *const _ as usize },
        256usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(mhz)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).mhz_max as *const _ as usize },
        260usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(mhz_max)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).mhz_min as *const _ as usize },
        264usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(mhz_min)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).cache_size as *const _ as usize },
        272usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(cache_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).total_sockets as *const _ as usize },
        280usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(total_sockets)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_t>())).total_cores as *const _ as usize },
        284usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(total_cores)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_cpu_info_t>())).cores_per_socket as *const _ as usize
        },
        288usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_t),
            "::",
            stringify!(cores_per_socket)
        )
    );
}
impl Default for sigar_cpu_info_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_cpu_info_list_t {
    pub number: ::std::os::raw::c_ulong,
    pub size: ::std::os::raw::c_ulong,
    pub data: *mut sigar_cpu_info_t,
}
#[test]
fn bindgen_test_layout_sigar_cpu_info_list_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_cpu_info_list_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_cpu_info_list_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_cpu_info_list_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_cpu_info_list_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_list_t>())).number as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_list_t),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_list_t>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_list_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_cpu_info_list_t>())).data as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_cpu_info_list_t),
            "::",
            stringify!(data)
        )
    );
}
impl Default for sigar_cpu_info_list_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
